Pipeline/javax_xml_soap/javax_xml_soapOutputResult.txt
Sample: MessageFactory_1
----------------------------------------------------------------
output:
./javax_xml_soap/javaFiles/MessageFactory_1.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.*;
^
./javax_xml_soap/javaFiles/MessageFactory_1.java:7: error: cannot find symbol
            MessageFactory factory = MessageFactory.newInstance();
            ^
  symbol:   class MessageFactory
  location: class MessageFactory_1
./javax_xml_soap/javaFiles/MessageFactory_1.java:7: error: cannot find symbol
            MessageFactory factory = MessageFactory.newInstance();
                                     ^
  symbol:   variable MessageFactory
  location: class MessageFactory_1
./javax_xml_soap/javaFiles/MessageFactory_1.java:10: error: cannot find symbol
            SOAPMessage message = factory.createMessage();
            ^
  symbol:   class SOAPMessage
  location: class MessageFactory_1
./javax_xml_soap/javaFiles/MessageFactory_1.java:14: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class MessageFactory_1
5 errors


================================================================

Sample: SOAPConnectionFactory_1
----------------------------------------------------------------
output:
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnection;
                     ^
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnectionFactory;
                     ^
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:8: error: cannot find symbol
            SOAPConnectionFactory soapConnectionFactory = SOAPConnectionFactory.newInstance();
            ^
  symbol:   class SOAPConnectionFactory
  location: class SOAPConnectionFactory_1
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:8: error: cannot find symbol
            SOAPConnectionFactory soapConnectionFactory = SOAPConnectionFactory.newInstance();
                                                          ^
  symbol:   variable SOAPConnectionFactory
  location: class SOAPConnectionFactory_1
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:9: error: cannot find symbol
            SOAPConnection soapConnection = soapConnectionFactory.createConnection();
            ^
  symbol:   class SOAPConnection
  location: class SOAPConnectionFactory_1
./javax_xml_soap/javaFiles/SOAPConnectionFactory_1.java:12: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPConnectionFactory_1
7 errors


================================================================

Sample: SOAPConnectionFactory_2
----------------------------------------------------------------
output:
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnection;
                     ^
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPConnectionFactory;
                     ^
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:8: error: cannot find symbol
            SOAPConnectionFactory soapConnectionFactory = SOAPConnectionFactory.newInstance();
            ^
  symbol:   class SOAPConnectionFactory
  location: class SOAPConnectionFactory_2
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:8: error: cannot find symbol
            SOAPConnectionFactory soapConnectionFactory = SOAPConnectionFactory.newInstance();
                                                          ^
  symbol:   variable SOAPConnectionFactory
  location: class SOAPConnectionFactory_2
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:9: error: cannot find symbol
            SOAPConnection soapConnection = soapConnectionFactory.createConnection();
            ^
  symbol:   class SOAPConnection
  location: class SOAPConnectionFactory_2
./javax_xml_soap/javaFiles/SOAPConnectionFactory_2.java:11: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPConnectionFactory_2
7 errors


================================================================

Sample: SOAPFactory_1
----------------------------------------------------------------
output:
./javax_xml_soap/javaFiles/SOAPFactory_1.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPFactory;
                     ^
./javax_xml_soap/javaFiles/SOAPFactory_1.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./javax_xml_soap/javaFiles/SOAPFactory_1.java:7: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
            ^
  symbol:   class SOAPFactory
  location: class SOAPFactory_1
./javax_xml_soap/javaFiles/SOAPFactory_1.java:7: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
                                  ^
  symbol:   variable SOAPFactory
  location: class SOAPFactory_1
./javax_xml_soap/javaFiles/SOAPFactory_1.java:9: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPFactory_1
5 errors


================================================================

Sample: SOAPFactory_3
----------------------------------------------------------------
output:
./javax_xml_soap/javaFiles/SOAPFactory_3.java:2: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPElement;
                     ^
./javax_xml_soap/javaFiles/SOAPFactory_3.java:3: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPFactory;
                     ^
./javax_xml_soap/javaFiles/SOAPFactory_3.java:4: error: package javax.xml.soap does not exist
import javax.xml.soap.SOAPException;
                     ^
./javax_xml_soap/javaFiles/SOAPFactory_3.java:9: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
            ^
  symbol:   class SOAPFactory
  location: class SOAPFactory_3
./javax_xml_soap/javaFiles/SOAPFactory_3.java:9: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
                                  ^
  symbol:   variable SOAPFactory
  location: class SOAPFactory_3
./javax_xml_soap/javaFiles/SOAPFactory_3.java:11: error: cannot find symbol
            SOAPElement element = factory.createElement(qname);
            ^
  symbol:   class SOAPElement
  location: class SOAPFactory_3
./javax_xml_soap/javaFiles/SOAPFactory_3.java:13: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPFactory_3
7 errors


================================================================

Sample: SOAPPart_2
----------------------------------------------------------------
output:
./javax_xml_soap/javaFiles/SOAPPart_2.java:1: error: package javax.xml.soap does not exist
import javax.xml.soap.*;
^
./javax_xml_soap/javaFiles/SOAPPart_2.java:6: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
            ^
  symbol:   class SOAPFactory
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:6: error: cannot find symbol
            SOAPFactory factory = SOAPFactory.newInstance();
                                  ^
  symbol:   variable SOAPFactory
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:7: error: cannot find symbol
            SOAPMessage message = factory.createMessage();
            ^
  symbol:   class SOAPMessage
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:8: error: cannot find symbol
            SOAPPart part = message.getSOAPPart();
            ^
  symbol:   class SOAPPart
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:9: error: cannot find symbol
            SOAPEnvelope envelope = part.getEnvelope();
            ^
  symbol:   class SOAPEnvelope
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:13: error: cannot find symbol
            SOAPHeader header = envelope.getHeader();
            ^
  symbol:   class SOAPHeader
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:14: error: cannot find symbol
            SOAPElement element = envelope.createElement("MyHeader");
            ^
  symbol:   class SOAPElement
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:18: error: cannot find symbol
            SOAPBody body = envelope.getBody();
            ^
  symbol:   class SOAPBody
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:19: error: cannot find symbol
            SOAPElement bodyElement = envelope.createElement("MyBody");
            ^
  symbol:   class SOAPElement
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:23: error: cannot find symbol
            SOAPEnvelope newEnvelope = factory.createSOAPEnvelope();
            ^
  symbol:   class SOAPEnvelope
  location: class SOAPPart_2
./javax_xml_soap/javaFiles/SOAPPart_2.java:26: error: cannot find symbol
        } catch (SOAPException e) {
                 ^
  symbol:   class SOAPException
  location: class SOAPPart_2
12 errors


================================================================

